Fix login dropdown - killed overflow on body

--- a/App/Client/stylesheet.css
+++ b/App/Client/stylesheet.css
@@ -4,7 +4,7 @@ html {
 
 body {
     background: #476c75;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
 
 }
 #logo {
@@ -85,7 +85,7 @@ body {
 #login-dp{
     min-width: 250px;
     padding: 14px 14px 0;
-    overflow: hidden;
+    /*overflow: visible !important;*/
     background-color:rgba(255,255,255,.8);
 }
 #login-dp .help-block{
